New-Upload-1755854042013/objects/Field_Permission__c.object
<CustomObject>
    <fields>
        <fullName>Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Set_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permission Set Name</label>
        <referenceTo>Permission_Set_Admin__c</referenceTo>
        <relationshipLabel>Field Permissions</relationshipLabel>
        <relationshipName>Field_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Permission_Set__c</fullName>
        <label>Permission Set</label>
        <referenceTo>Permission_Set__c</referenceTo>
        <relationshipLabel>Field Permissions</relationshipLabel>
        <relationshipName>Field_Permissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Readable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Readable</label>
        <type>Checkbox</type>
    </fields>
    <label>Field Permission</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FP-{0000}</displayFormat>
        <label>Field Permission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Permissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>